test/compile_errors/lib/issue57/no_import_user.w
pub fn bad(id: TypeId) -> i32:
    id
